include/svx/weldeditview.hxx
@@ -68,6 +68,7 @@ public:
     virtual bool MouseButtonUp(const MouseEvent& rMEvt) override;
     virtual bool KeyInput(const KeyEvent& rKEvt) override;
     virtual bool Command(const CommandEvent& rCEvt) override;
+    virtual bool CanFocus() const;
     virtual void GetFocus() override;
     virtual void LoseFocus() override;
     virtual void Resize() override;
