sc/source/ui/inc/inputwin.hxx
@@ -125,6 +125,7 @@ protected:
     virtual bool    MouseButtonUp( const MouseEvent& rMEvt ) override;
     virtual bool    Command( const CommandEvent& rCEvt ) override;
     virtual bool    KeyInput(const KeyEvent& rKEvt) override;
+    virtual bool    CanFocus() const override;
     virtual void    GetFocus() override;
 
     virtual bool    StartDrag() override;
