svx/source/dialog/weldeditview.cxx
@@ -179,7 +179,7 @@ bool WeldEditView::MouseButtonDown(const MouseEvent& rMEvt)
     if (!IsMouseCaptured())
         CaptureMouse();
 
-    if (!HasFocus())
+    if (!HasFocus() && CanFocus())
     {
         GrabFocus();
         GetFocus();
@@ -1539,6 +1539,8 @@ void WeldEditView::LoseFocus()
             pHelper->SetFocus(false);
     }
 }
+
+bool WeldEditView::CanFocus() const { return true; }
 
 namespace
 {
